fix gdd calculation error and make sure pages can scroll on mobile

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -42,6 +42,7 @@
 }
 
 :root {
+  --sidebar-width: 4rem;
   --radius: 0.625rem;
   --background: oklch(1 0 0);
   --foreground: oklch(0.145 0 0);
@@ -75,6 +76,12 @@
   --sidebar-border: oklch(0.922 0 0);
   --sidebar-ring: oklch(0.708 0 0);
   --nivo-axis-text: #222;
+}
+
+@media (min-width: 768px) {
+  :root {
+    --sidebar-width: 16rem;
+  }
 }
 
 .dark {
